--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "filter_with_git.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./filter_with_git.js"
+    "dev": "nodemon ./filter_git_db.js",
+    "ingest":"node ./ingestRepos.js",
+    "process":"node ./processRepos.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +15,7 @@
   "type": "commonjs",
   "dependencies": {
     "@octokit/rest": "^22.0.1",
+    "@supabase/supabase-js": "^2.95.3",
     "dotenv": "^17.2.4",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.11"
