--- a/.github/workflows/hourly-cron.yml
+++ b/.github/workflows/hourly-cron.yml
@@ -9,6 +9,12 @@ jobs:
   run-pipeline:
     runs-on: ubuntu-latest
 
+    env:
+      NODE_ENV: production
+      GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
+      SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
