--- a/.github/workflows/hourly-cron.yml
+++ b/.github/workflows/hourly-cron.yml
@@ -2,7 +2,7 @@ name: Run Ingest Process Pipeline Hourly
 
 on:
   schedule:
-    - cron: "* * * * *"   
+    - cron: "*/5 * * * *"   
   workflow_dispatch:       
 
 jobs:
